:bug: fix modal scrollbar

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -22,7 +22,7 @@
 	&.open {
 		visibility: visible;
 		opacity: 1;
-		transform: scale(calc(1.01 + var(--modal-scale)));
+		transform: scale(calc(1 + var(--modal-scale)));
 		margin: 0;
 	}
 
